[package]
name = "esp32s3_box"
version = "0.1.0"
authors = ["Samuel Benko <samuel.benko@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32s3-hal", version = "0.13.0" }
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = [ "esp32s3" ] }
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
mipidsi = "0.7.1"
display-interface = "0.4"
display-interface-spi = "0.4"

#rustmas dependencies
libm = "0.2.5"
tinybmp = "0.5.0"
examples-assets = { path = "./examples-assets"}
