[package]
name = "esp32s3_box"
version = "0.1.0"
authors = ["Samuel Benko <samuel.benko@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.15.0" }
esp-backtrace = { version = "0.11.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.9.0", features = [ "esp32s3" ] }
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
mipidsi = "0.7.1"
esp-display-interface-spi-dma = { version = "0.1.0", features = ["esp32s3"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
esp-bsp = "0.2.0"

#rustmas dependencies
libm = "0.2.5"
tinybmp = "0.5.0"
examples-assets = { path = "./examples-assets"}